Политика, оферта и отмена
Сделал три странички со стилями. Объединил стили для политики и оферты в один файл, осталось только добавить текст. Для отмены подписки реализовал первичную верстку, остальное на обсуждение.

--- a/css/main.css
+++ b/css/main.css
@@ -19,9 +19,9 @@ body{
     color: #ffffff;
 }
 
-.navbar-toggler-icon{
-    color: #ff331f;
-}
+.navbar .navbar-toggler .navbar-toggler-icon {
+    color: #fff;
+  }
 
 
 /*-------------------------------- MAIN SECTION -------------------------------*/
