--- a/css/main.css
+++ b/css/main.css
@@ -44,7 +44,32 @@ body {
 .age-block {
     margin: 10px 0;
     text-align: center;
+    cursor: pointer; /* Курсор в виде указателя */
+    transition: all 0.3s ease; /* Плавный переход для всех свойств */
+    position: relative; /* Для эффекта поднятия */
+    overflow: hidden; /* Для анимации псевдоэлемента */
 }
+
+.age-block:hover {
+    transform: translateY(-5px); /* Поднятие кнопки */
+    box-shadow: 0 8px 16px rgba(255, 51, 31, 0.3); /* Тень */
+}
+
+.age-block::after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 300%;
+    height: 300%;
+    background: rgba(255, 255, 255, 0.2); /* Белый полупрозрачный цвет */
+    border-radius: 50%;
+    transform: translate(-50%, -50%) scale(0);
+    transition: transform 0.5s ease;
+    pointer-events: none; /* Чтобы не мешать кликам */
+}
+
+
 .age-block img {
     width: 100%;
     max-width: 200px;
