--- a/css/authform.css
+++ b/css/authform.css
@@ -43,6 +43,7 @@ body{
 /*------------------------- СТРАНИЦА ОТМЕНЫ ПОДПИСКИ ------------------------*/
 
 .auth-section {
+    z-index: 1;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -221,4 +222,43 @@ body{
 
 .auth-container .btn:hover::after {
     transform: translate(-50%, -50%) scale(1); /* Увеличение "волны" */
+}
+
+/*----------------------   АНИМАЦИЯ КРУГОВ   ---------------------*/
+
+.background-animation {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+.circle {
+    position: absolute;
+    width: 150px;
+    height: 150px;
+    background: rgba(255, 0, 0, 0.3);
+    border-radius: 50%;
+    filter: blur(50px);
+    animation: move 20s infinite ease-in-out;
+}
+
+@keyframes move {
+    0% {
+        transform: translate(0, 0);
+    }
+    25% {
+        transform: translate(200px, 150px);
+    }
+    50% {
+        transform: translate(400px, 50px);
+    }
+    75% {
+        transform: translate(200px, 200px);
+    }
+    100% {
+        transform: translate(0, 0);
+    }
 }
