--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,13 +1,13 @@
 @font-face {
 	font-family: 'Nunito Regular'; 
-	src: url(/fonts/Nunito-Regular.ttf); 
+	src: url(../fonts/Nunito-Regular.ttf); 
 }
 
 @font-face {
 	font-family: 'Nunito-Bold'; 
-	src: url(/fonts/Nunito-Bold.ttf); 
+	src: url(../fonts/Nunito-Bold.ttf); 
 }
 
-body {
-    font-family: 'Nunito-Bold';
+* {
+    font-family: 'Nunito Regular';
 }
