--- a/css/main.css
+++ b/css/main.css
@@ -42,6 +42,7 @@ body {
     margin-bottom: 50px;
 }
 .age-block {
+    border-radius: 20px;
     margin: 10px 0;
     text-align: center;
     cursor: pointer; /* Курсор в виде указателя */
@@ -131,4 +132,44 @@ footer a:hover {
     text-align: center;
     font-size: 0.8rem;
     color: #666;
+}
+
+
+/*----------------------   АНИМАЦИЯ КРУГОВ   ---------------------*/
+
+.background-animation {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+.circle {
+    position: absolute;
+    width: 150px;
+    height: 150px;
+    background: rgba(255, 0, 0, 0.3);
+    border-radius: 50%;
+    filter: blur(50px);
+    animation: move 20s infinite ease-in-out;
+}
+
+@keyframes move {
+    0% {
+        transform: translate(0, 0);
+    }
+    25% {
+        transform: translate(200px, 150px);
+    }
+    50% {
+        transform: translate(400px, 50px);
+    }
+    75% {
+        transform: translate(200px, 200px);
+    }
+    100% {
+        transform: translate(0, 0);
+    }
 }
