--- a/css/personalaccount.css
+++ b/css/personalaccount.css
@@ -54,10 +54,12 @@ body {
 .offcanvas-start {
     transform: translateX(-100%);
     transition: transform 0.3s ease-in-out;
+    z-index: 101;
 }
 
 .offcanvas.show {
     transform: translateX(0);
+    z-index: 101;
     transition: transform 0.3s ease-in-out;
 }
 
@@ -69,6 +71,7 @@ body {
 
 .btn{
     position: absolute;
+    z-index: 100;
     background-color: #ff331f;
     top: 50%;
     height: 100px;
