--- a/css/indexstyle.css
+++ b/css/indexstyle.css
@@ -13,7 +13,7 @@ body {
     font-size: 4rem;
     font-weight: 900;
     margin-bottom: 10px;
-    color: #ff331f;
+    color: #fff;
 }
 
 .main-title p {
@@ -58,7 +58,7 @@ body {
     text-align: center;
     font-size: 1.5rem;
     font-weight: bold;
-    color: black;
+    color: rgb(255, 255, 255);
     opacity: 0;
     transition: all 0.3s ease;
 }
@@ -71,8 +71,8 @@ body {
 .footer-text {
     text-align: center;
     margin-top: 50px;
-    color: #666;
-    font-size: 0.9rem;
+    color: #bdbdbd;
+    font-size: 1.2rem;
 }
 
 /*----------------------   АНИМАЦИЯ КРУГОВ   ---------------------*/
